# protoconf

./: .arclint  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: bazel.yml
generate/: BUILD.bazel  generate.go  generate_test.go
generate/testdata/: BUILD.bazel  testdata.go
libprotoconf/: BUILD.bazel  deps.bzl  libprotoconf.go  libprotoconf_test.go  test_watcher.go
proto_std_lib/src/: secret.proto
tests/: deps.bzl
tests/vaultmock/: BUILD.bazel  deps.bzl  vaultmock.go
tools/: nogo_config
