load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "libprotoconf",
    srcs = [
        "file_watcher.go",
        "kv_watcher.go",
        "libprotoconf.go",
    ],
    importpath = "protoconf.com/libprotoconf",
    visibility = ["//visibility:public"],
    deps = [
        "//consts",
        "//datatypes/proto/v1:protoconf_value_go_proto",
        "//utils",
        "//proto_std_lib:secret_go_proto",
        "@com_github_docker_libkv//:go_default_library",
        "@com_github_docker_libkv//store:go_default_library",
        "@com_github_docker_libkv//store/consul:go_default_library",
        "@com_github_docker_libkv//store/zookeeper:go_default_library",
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_hashicorp_vault//api:go_default_library",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["libprotoconf_test.go"],
    embed = [":libprotoconf"],
    deps = ["//tests/vaultmock:go_default_library"],
)
